problem header layout broken depend on screen size solved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,7 +14,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
@@ -170,9 +170,15 @@ button {
   border: 2px solid #00c1a6;
   color: #fff;
 }
-.navBtn {
+.navBtnCase {
   margin: 0 0;
   min-width: 200px;
+  width: 100%;
+  height: 70px;
+}
+.navBtn {
+  /* margin: 0 0;
+  min-width: 200px; */
   width: 100%;
   height: 70px;
   padding: 20px 0;
@@ -188,10 +194,10 @@ button {
   color: #ffffff;
 }
 .subNavList {
-  position: absolute;
+  /* position: absolute; */
   /* top: 45px; */
-  /* min-width: 100%; */
-  width: 300px;
+  min-width: 200px;
+  width: 100%;
   max-height: 111px;
   overflow-y: auto;
   white-space: nowrap;
